Adicionando todo o resto que havia na pasta do Google Drive até 2020-05-28

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 *.ini
+livro_texto/livro-noções-de-probabilidade-e-estatística-magalhães-parte-1.pdf
+material_complementar/Estatística_Básica_-_A_Arte_de_Trabalhar_com_Dados.pdf
+material_complementar/Estatística_Básica_-_Morettin_e_Bussab_-_5ed.pdf
+material_complementar/Introdução_Teoria_Da_Probabilidade_-_Hoel_Port_Stone.pdf
+material_complementar/Paul_L._Meyer_-_Probabilidade_Aplicações_à_Estatística.pdf
+video_aulas/Probabilidade_e_Estatistica_Aula_03.webm
